fix links style on collapsed card

--- a/scss/partials/_topic.scss
+++ b/scss/partials/_topic.scss
@@ -200,6 +200,8 @@ div.topic {
           a {
             text-decoration: none;
             pointer-events: none;
+            box-shadow: inset 0 -1px 0 $oc_gray_5;
+            font-weight: normal;
           }
 
           img{
